k8s/immich/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: {name: immich-ingress, namespace: immich}
spec:
  ingressClassName: traefik
  rules:
    - host: immich.k8s.ote
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: {service: {name: immich-server, port: {number: 2283}}}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress-https
  namespace: immich
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - secretName: immich-tls
      hosts: [immich.k8s.overtheedgepaper.ca]
  rules:
    - host: immich.k8s.overtheedgepaper.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: {service: {name: immich-server, port: {number: 2283}}}
